--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,22 +7,13 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="title_activity_detail_course">Detail Course</string>
+    <string name="title_activity_detail">Detail</string>
     <string name="title">Title</string>
     <string name="description">Description</string>
-    <string name="dateline">Dateline</string>
-    <string name="description_course">Deskripsi Kelas</string>
-    <string name="example">Example</string>
-    <string name="start_learn">Mulai Belajar</string>
-    <string name="list_module">Daftar Modul</string>
-    <string name="home">Home</string>
-    <string name="bookmark">Bookmark</string>
-    <string name="menu_bookmark">bookmark</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-    <string name="last_seen">Terakhir dilihat</string>
-    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
-    <string name="message_ok">OK</string>
-    <string name="deadline_date">Deadline %s</string>
-    <string name="share_text">Segera daftar kelas %s di dicoding.com</string>
+    <string name="release_date">Tanggal Rilis</string>
+    <string name="description_course">Deskripsi</string>
+    <string name="movie">Movie</string>
+    <string name="tv_show">TV Show</string>
+    <string name="deadline_date">Tanggal Rilis : %s</string>
+    <string name="share_text">Share</string>
 </resources>
