--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="tv_show">TV Show</string>
     <string name="deadline_date">Tanggal Rilis : %s</string>
     <string name="share_text">Share</string>
+    <string name="share_now">Bagikan aplikasi ini sekarang.</string>
 </resources>
